--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html , body{
+html,
+body {
     scroll-behavior: smooth;
 }
 
@@ -23,7 +24,7 @@ html , body{
     padding: 3rem;
 }
 
-.bg-none{
+.bg-none {
     background-color: #f1f0f0 !important;
 }
 
@@ -121,21 +122,39 @@ html , body{
 }
 
 .email-div {
-    width: 100%;
     background: #f7f7f7;
-    padding: 4em 2em;
+    padding: 1.5em 2em;
     border: 1px solid #ddd;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    z-index: 9;
+    border-radius: 10px;
 }
 
-.opacity-7{
+.btn-close{
+    float: right;
+}
+
+.open-button {
+    cursor: pointer;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    font-size: 40px;
+    border: 10px solid #f7f7f7;
+    border-radius: 50%;
+}
+
+.opacity-7 {
     filter: brightness(50%);
 }
 
-.contact-grid .no-text{
+.contact-grid .no-text {
     color: black !important;
 }
 
-.no-text{
+.no-text {
     text-decoration: none;
     color: #fff !important;
 }
@@ -151,7 +170,7 @@ html , body{
     bottom: auto;
 }
 
-.title{
+.title {
     color: #FFF;
     letter-spacing: 3px;
     /* text-transform: uppercase; */
@@ -160,7 +179,7 @@ html , body{
     font-size: 70px;
 }
 
-.title span{
+.title span {
     color: #ef4d4a;
     /* color: #0D3A33; */
     font-family: 'Playfair Display', serif;
@@ -173,17 +192,17 @@ html , body{
     border-right: 1px solid #333;
 }
 
-.icons{
+.icons {
     display: flex;
     flex-direction: row;
 }
 
-.icon{
+.icon {
     font-size: 28px;
     margin-right: 24px;
 }
 
-.icon:hover{
+.icon:hover {
     opacity: 0.6;
     cursor: pointer;
 }
@@ -193,11 +212,11 @@ html , body{
     margin-top: 20px;
 }
 
-.c-height{
+.c-height {
     height: 100vh;
 }
 
-.process{
+.process {
     margin-top: 4rem
 }
 
@@ -266,11 +285,11 @@ html , body{
         padding: 0.5rem;
     }
 
-    .process{
+    .process {
         margin-top: 4px
     }
 
-    .title{
+    .title {
         font-size: 40px;
     }
 }
@@ -299,7 +318,7 @@ html , body{
         padding: 5rem 3rem;
     }
 
-    .process{
+    .process {
         margin-top: 4px
     }
 
@@ -311,11 +330,11 @@ html , body{
         width: 100%;
     }
 
-    .c-height{
+    .c-height {
         height: 100%;
     }
 
-    .title{
+    .title {
         font-size: 40px;
     }
 }
