--- a/style.css
+++ b/style.css
@@ -194,6 +194,10 @@ body {
     /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
 }
 
+#msg-response{
+    display: none;
+}
+
 
 
 .border-r {
