--- a/style.css
+++ b/style.css
@@ -144,9 +144,13 @@ body {
     position: fixed;
     bottom: 10px;
     right: 10px;
-    font-size: 40px;
-    border: 10px solid #f7f7f7;
-    border-radius: 50%;
+    font-size: 16px;
+    background: black;
+    padding: 12px;
+    color: #FFF;
+    font-weight: bolder;
+    /* border: 10px solid #f7f7f7; */
+    border-radius: 16px;
 }
 
 .opacity-7 {
